GNOME Bugzilla – Bug 732705
Check for tmon in _xmlSchemaDateAdd() is incorrect
Last modified: 2014-07-14 14:32:05 UTC
In _xmlSchemaDateAdd(), the check for |tmon| should be the following since MAX_DAYINMONTH() expects a month in the range [1,12]: if (tmon < 1) tmon = 1; See: <https://git.gnome.org/browse/libxml2/tree/xmlschemastypes.c#n3847> Regressed in: <https://git.gnome.org/browse/libxml2/commit/?id=14b5643947845df089376106517c4f7ba061e4b0>
Ah indeed, plus it's my fault :-) ... 8 years ago ! Fixed now in git, commit 30cf439efcea9732d0ecd33b7955666ce264129b thanks ! Daniel